# horaedb-client-py

./: .asf.yaml  .gitignore  Cargo.toml  Makefile  README.md  build.rs  ceresdb_client.pyi  ceresdb_client_py.pyi  horaedb_client.pyi  licenserc.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/: read_write.py
src/: client.rs  lib.rs  model.rs
