# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "horaedb-client"
description = "Python client for Apache HoraeDB(incubating), a high-performance, distributed, cloud native time-series database."
readme = "README.md"
license = "Apache-2.0"
keywords = ["database", "time-series", "iot", "devops"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/apache/horaedb-client-py"
Homepage = "https://github.com/apache/horaedb-client-py"
Repository = "https://github.com/apache/horaedb-client-py"

[tool.maturin]
features = ["pyo3/extension-module"]
